[package]
name = "mcfly"
version = "0.6.1"
authors = ["Andrew Cantino <cantino@users.noreply.github.com>"]
edition = "2021"
description = "McFly replaces your default ctrl-r shell history search with an intelligent search engine that takes into account your working directory and the context of recently executed commands. McFly's suggestions are prioritized in real time with a small neural network."
license = "MIT"
repository = "https://github.com/cantino/mcfly"
categories = ["command-line-utilities"]
exclude = [
  "HomebrewFormula",
  "HomebrewFormula/*",
  "pkg/*",
  "docs/*",
]

[profile.release]
lto = true

[profile.dev]
debug = true

[dependencies]
chrono = "0.4.22"
clap = "2"
csv = "1.1.6"
humantime = "2.1.0"
itertools = "0.10.3"
crossterm = "0.18"
# crossterm = "0.25.0"
directories = "4.0.1"
figment = { version = "0.10.6", features = ["toml"] }
libc = "0.2.132"
rand = "0.8.5"
regex = "1.6.0"
relative-path = "1.7.2"
shellexpand = "2.1.2"
unicode-segmentation = "1.9.0"
serde = { version = "1.0.144", features = ["derive"] }

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled", "functions", "unlock_notify"]
